# throwless

./: CMakeLists.txt  main.cpp  program  readme.md
.cache/clangd/index/: ArithmeticTestOption.cpp.B6FD8CE0F0A21D48.idx  Concepts.hpp.4F82DF4E0A962908.idx  CoproductOperations.hpp.7BA7CD56602134FA.idx  Error.hpp.8B67B1A86FC2019F.idx  ErrorConcept.hpp.27EA2DF965B93428.idx  GeneralTestError.cpp.4F5CCBFFDC230F03.idx  GeneralTestOption.cpp.C64B8F0F9647083F.idx  GeneralTestResult.cpp.BDCE702DCDC8AE1B.idx  Option.hpp.962C5645339776B2.idx  Option.tpp.C675064DD7D71D98.idx  Result.hpp.ECAE17F28C50E979.idx  Result.tpp.C6EA1AC82B89178C.idx
.github/workflows/: ci.yml
Concepts/: Concepts.hpp
Error/: Error.hpp  ErrorConcept.hpp  TryOrConvert.hpp
Option/: CoproductOperations.hpp  Option.hpp  Option.tpp
Result/: Result.hpp  Result.tpp
SmartPtr/SharedPtr/: ArrayControlBlock.hpp  ArrayControlBlock.tpp  ArraySharedPtr.hpp  ArraySharedPtr.tpp  ControlBlock.hpp  ControlBlock.tpp  SharedPtr.hpp  SharedPtr.tpp
SmartPtr/UniquePtr/: ArrayUniquePtr.hpp  ArrayUniquePtr.tpp  UniquePtr.hpp  UniquePtr.tpp
SmartPtr/WeakPtr/: ArrayWeakPtr.hpp  ArrayWeakPtr.tpp  WeakPtr.hpp  WeakPtr.tpp
include/Either/: Either.hpp  Specializations.hpp
include/Error/: Error.hpp  ErrorConcept.hpp
include/Option/: Option.hpp
include/Optional/: Optional.hpp
include/Result/: Result.hpp
include/SmartPtr/: SharedPtr.hpp  UniquePtr.hpp
include/UsedConcepts/: Concepts.hpp
include/Void/: Void.hpp
src/Either/: Either.tpp  Either<L>.hpp  Either<R>.hpp  Specializations.hpp
src/Error/: Error.tpp
src/Option/: Option.tpp
src/Optional/: Optional.tpp
src/Result/: Result.tpp
src/SmartPtr/SharedPtr/: ArraySharedPtr.hpp  ControlBlock.hpp  ControlBlock.tpp  MakeSharedPtr.tpp  SharedPtr.tpp
src/SmartPtr/UniquePtr/: MakeUniquePtr.tpp
test/: CMakeLists.txt  RandomGenerator.hpp  Utils.cpp  Utils.hpp
test/Either/: CMakeLists.txt  GeneralTestEither.cpp  SpecializationsTest.cpp
test/Error/: ErrorTest.cpp  TestError.cpp  TryOrConvertTest.cpp
test/Option/: ArithmeticTestOption.cpp  GeneralTestOption.cpp  TestOption.cpp
test/Result/: GeneralTestResult.cpp
test/SharedPtr/: GeneralTestSharedPtr.cpp  TestArraySharedPtr.cpp  TestMakeSharedPtr.cpp
test/UniquePtr/: GeneralTestUniquePtr.cpp  TestArrayUniquePtr.cpp  TestMakeUniquePtr.cpp  TestSpecializedUniquePtr.cpp
test/WeakPtr/: GeneralTestWeakPtr.cpp  TestArrayWeakPtr.cpp
test/_TestUtils/: RandomGenerator.hpp  Utils.hpp
